update: sequence, removed drums WIP

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         play notes instantly. Press the "Start/Stop Sequence" button to play or stop
         selected notes in sequence.
     </div>
-    <button id="start-button" onclick="toggleSequence()">Start Sounds</button>
+    <button id="start-button" onclick="toggleSequence()">Start Your Tune</button>
     <button id="clear-button" onclick="clearSequence()">Clear Sounds</button>
 
   <div id="content"></div>
